# thesis-pipeline

./: .gitignore  README.md  cellpose-gpu-clean.yml  environment.yml  pyproject.toml
configs/: cellpose.yaml  stardist.yaml  unet_train.yaml  unet_watershed.yaml
scripts/: 00_dataset_sanity.py  01_convert_gt_to_instance_masks.py  02_make_gt_overlay.py  03_build_manifest.py  04_run_cellpose_smoke.py  04_run_stardist_smoke.py  04_run_unet_watershed_smoke.py  05_run_cellpose_batch.py  05_run_stardist_batch.py  06_run_cellpose_from_manifest.py  06_run_stardist_from_manifest.py  06_run_unet_watershed_from_manifest.py  07_evaluate_cellpose_predictions.py  07_evaluate_stardist_predictions.py  07_evaluate_unet_watershed_predictions.py  08_run_watershed_smoke.py  09_visualize_watershed_smoke.py  10_train_unet.py  11_visualize_unet_watershed_smoke.py  12_visualize_unet_probability_map.py  13_sweep_unet_watershed_postprocessing.py  14_make_qualitative_comparison_figures.py  15_make_roi_qualitative_figure.py  16_build_summary_tables.py
src/nuclei_benchmark/data/: dataset.py  ground_truth.py  io.py  manifest.py  unet_dataset.py
src/nuclei_benchmark/metrics/: instance_metrics.py
src/nuclei_benchmark/models/: base.py  cellpose_model.py  stardist_model.py  unet_network.py  unet_watershed_model.py
src/nuclei_benchmark/postprocessing/: watershed.py
src/nuclei_benchmark/training/: losses.py
src/nuclei_benchmark/utils/: config.py
src/nuclei_benchmark/visualization/: overlays.py
